src/yini_test/cases/golden/strict/valid/sections/single-top-level-section.strict.yini
@yini strict

^ Application
name = "strict-section-single"
enabled = true
environment = "production"

/END
