src/yini_test/cases/golden/strict/invalid/duplicate-handling/duplicate-section.strict.yini
@yini strict

^ Application
name = "first-section"

^ Application
name = "second-section"

/END
